--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
     text-align: center;
     width: 70%;
     margin: 0 auto;
+    font-style: italic;
+    font-size: .75rem;
 }
 
 .scripture_verse {
@@ -19,6 +21,7 @@ body {
 h1, .part h2 {
     color: rgb(190, 6, 6);
     font-variant: small-caps;
+    font-size: 1.6rem;
 }
 
 .chapter_link {
@@ -26,10 +29,12 @@ h1, .part h2 {
     margin: 0.75rem 0;
     font-weight: 600;
     transition: all 0.3s ease-in-out;
+    font-size: 1rem;
 }
 
 .chapter_link:hover {
     font-size: 1.25rem;
     color: rgb(30, 122, 122);
     box-shadow: inset rgb(30, 122, 122);
+    cursor: pointer;
 }
